fix(icon-view): added vertical-align

--- a/packages/icon-view/src/components/base-shape/index.module.css
+++ b/packages/icon-view/src/components/base-shape/index.module.css
@@ -18,6 +18,10 @@
     width: 100%;
     height: 100%;
     color: var(--icon-view-color);
+
+    & > svg {
+        vertical-align: top;
+    }
 }
 
 .bg {
